<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_news_form">SendNewsForm</string>
    <string name="foto"><u>Hacer foto</u></string>
    <string name="video"><u>Hacer video</u></string>
    <string name="contentnews">¿Qué está ocurriendo?</string>
    <string name="subirnews">subir noticia</string>
    <string name="title_activity_hot_cold_zone">HotColdZone</string>
    <string name="cont">Content</string>
    <string name="cont2">Title</string>
    <string name="asdfsss">asdf</string>

</resources>
