<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.com.hotcold.hotcold.SendNewsForm">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/listImgPreview"
        android:layout_marginTop="0dp"
        android:src="@drawable/photo_buttom"
        android:layout_x="7dp"
        android:layout_y="0dp"
        android:contentDescription="button" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/videoPreview"
        android:src="@drawable/camera_buttom"
        android:layout_gravity="top"
        android:layout_marginLeft="100dp"
        android:layout_x="170dp"
        android:layout_y="0dp"
        android:contentDescription="asdf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/foto"
        android:id="@+id/textView2"
        android:textColor="#fff"
        android:layout_alignParentStart="true"
        android:layout_x="50dp"
        android:layout_y="160dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/video"
        android:id="@+id/textView"
        android:layout_marginBottom="22dp"
        android:textColor="#fff"
        android:layout_x="210dp"
        android:layout_y="160dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/textNew"
        android:background="@drawable/radius"
        android:autoText="false"
        android:gravity="center"
        android:layout_x="25dp"
        android:hint="Titular"
        android:layout_y="190dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:id="@+id/contentNewsText"
        android:hint="@string/contentnews"
        android:background="@drawable/radius"
        android:gravity="center"
        android:autoText="false"
        android:layout_x="25dp"
        android:layout_y="248dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_y="440dp">

        <ImageView
            android:layout_width="180px"
            android:layout_height="90px"
            android:id="@+id/imageView2"
            android:layout_x="262dp"
            android:layout_y="439dp"
            android:src="@drawable/_link_bottom" />

        <Button
            android:layout_width="600px"
            android:layout_height="110px"
            android:text="@string/subirnews"
            android:id="@+id/sendNewsButton"
            android:layout_toEndOf="@+id/textView"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/contentNewsText"
            android:layout_x="100dp"
            android:layout_y="420dp"
            android:layout_marginTop="-10dp"
            android:textColor="#ff385271"
            android:background="@drawable/radius" />

        <ImageView
            android:layout_width="180px"
            android:layout_height="90px"
            android:id="@+id/imageView"
            android:layout_x="-30dp"
            android:layout_y="440dp"
            android:src="@drawable/location_bottom" />

    </LinearLayout>

</AbsoluteLayout>
