<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.com.hotcold.HotColdZoneActivity"
    android:id="@+id/full">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="370dp"
            android:weightSum="1"
            android:layout_weight="1"
            android:id="@+id/layoutContainer"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/layoutNews">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/listImgPreview"
                    android:contentDescription="@string/asdfsss"
                    android:background="@drawable/matanza" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cont2"
                    android:id="@+id/textTitleNew"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.16"
                    android:textStyle="bold"
                    android:gravity="center_vertical|center_horizontal" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="10dp"
                    android:id="@+id/imageView3"
                    android:background="@drawable/rectangle41"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="335dp"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/cont"
                    android:id="@+id/textContentNew"
                    android:layout_weight="0.47"
                    android:gravity="center_vertical" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/button5"
                android:clickable="false"
                android:enabled="false"
                android:background="@drawable/anterior"
                android:layout_marginLeft="0dp" />

            <Button
                android:layout_width="75dp"
                android:layout_height="40dp"
                android:id="@+id/button7"
                android:background="@drawable/share_bottom"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="65dp" />

            <Button
                android:layout_width="80dp"
                android:layout_height="65dp"
                android:id="@+id/button6"
                android:background="@drawable/siguiente"
                android:layout_marginLeft="45dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
